<?xml version="1.0"?>
<package format="2">
  <name>psen_scan_v2_prerelease</name>
  <version>0.0.0</version>
  <description>Prerelease tests for the psen_scan_v2 package</description>

  <maintainer email="a.gutenkunst@pilz.de">Alexander Gutenkunst</maintainer>
  <maintainer email="c.doehn@pilz.de">Christian Döhn</maintainer>
  <maintainer email="c.henkel@pilz.de">Christian Henkel</maintainer>
  <maintainer email="i.martini@pilz.de">Immanuel Martini</maintainer>
  <maintainer email="r.feistenauer@pilz.de">Richard Feistenauer</maintainer>

  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>psen_scan_v2</test_depend>
  <test_depend>roslaunch</test_depend>
  <test_depend>rosnode</test_depend>
  <test_depend>rospy</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>

</package>
